<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_app_main_key" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="PREF_ASK_MAIN_KEY"
            android:summary="@string/pref_summary_ask_key"
            android:title="@string/pref_ask_for_main_key" />

        <EditTextPreference
            android:defaultValue=""
            android:dialogMessage="@string/set_a_password_to_access_to_mysecrets"
            android:dialogTitle="@string/enter_main_password"
            android:key="PREF_MAIN_PASSWORD"
            android:summary="@string/set_a_password_to_acces_to_mysecrets"
            android:title="@string/enter_main_password" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="PREF_SORT_BY_NAME"
            android:summary="@string/pref_summary_sort_by_name"
            android:title="@string/pref_sort_by_name" />

        <ListPreference
            android:defaultValue=";"
            android:dialogTitle="@string/pref_separators"
            android:entries="@array/imp_exp_sep_descriptions"
            android:entryValues="@array/imp_exp_seps"
            android:key="PREF_IMPEXP_SEPARATOR"
            android:summary="@string/pref_separators"
            android:title="@string/pref_separator_for_exports" />
    </PreferenceCategory>

</PreferenceScreen>