<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|bottom|fill_vertical"
        android:entries="@array/categories" >
    </Spinner>

    <EditText
        android:id="@+id/etName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/short_secret_description" >

        <requestFocus>
        </requestFocus>
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etUrl"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:hint="@string/web_site_or_email_address"
            android:inputType="textUri"
            android:linksClickable="true" >

        </EditText>

        <Button
            android:id="@+id/buGoUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/go_" >
        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user" >
    </TextView>

    <EditText
        android:id="@+id/etUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/tvPassw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" >
    </TextView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etPassw"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:inputType="text|textPassword" >
        </EditText>

        <ToggleButton
            android:id="@+id/tbShowPassw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textOff="Show"
            android:textOn="Hide" >
        </ToggleButton>
    </LinearLayout>

    <TextView
        android:id="@+id/tvMemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memo" >
    </TextView>

    <EditText
        android:id="@+id/etMemo"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".50"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:linksClickable="true" >
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buOk"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight=".50"
            android:hint="@string/describe_your_secret"
            android:text="@string/ok" >
        </Button>

        <Button
            android:id="@+id/buCancel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="right"
            android:layout_weight=".50"
            android:text="@string/cancel" >
        </Button>
    </LinearLayout>

</LinearLayout>