<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/welcome_to_mysecrets_please_enter_your_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etPassw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_marginTop="20dp">

        <Button
            android:id="@+id/buOk"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight=".50"
            android:hint="@string/describe_your_secret"
            android:text="@string/ok" android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/buCancel"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_weight=".50"
            android:text="@string/cancel" android:layout_marginRight="20dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvRestoreKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textAppearance="?android:attr/textAppearanceSmall" android:autoLink="email"/>

</LinearLayout>