<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_width="fill_parent"
  android:layout_height="fill_parent">

    <TextView
        android:id="@+id/tvImportExportHelp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/import_export_help"
        android:textAppearance="?android:attr/textAppearanceMedium" />

  <Button android:id="@+id/exportdbtosdbutton"
    android:layout_width="200dp" android:layout_height="wrap_content"
    android:layout_marginTop="20dp" android:layout_gravity="center_horizontal"
    android:text="@string/export_secrets_to_sd_card" />

  <Button android:id="@+id/importdbfromsdbutton"
    android:layout_width="200dp" android:layout_height="wrap_content"
    android:layout_marginTop="20dp" android:layout_gravity="center_horizontal"
    android:text="@string/import_secrets_from_sd_card" />
  
</LinearLayout>
