<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
    <ListView android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/myListView" android:layout_gravity="top" android:layout_weight="1"></ListView>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout1">
        <Spinner android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/spShowCategory" android:entries="@array/show_categories"></Spinner>
        <TextView android:layout_height="wrap_content" android:id="@+id/tvRecCount" android:text="RC" android:layout_width="70dp" android:layout_gravity="center_vertical|center_horizontal" android:gravity="center"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/linFilter">
        <EditText android:layout_width="fill_parent" android:layout_weight="1" android:layout_height="wrap_content" android:id="@+id/etFilterText" android:hint="@string/edFilterHint"></EditText>
        <Button android:layout_height="wrap_content" android:layout_width="70dp" android:id="@+id/buFilter" android:text="@string/buFilterText"></Button>
        <Button android:layout_height="wrap_content" android:text="@string/clear" android:layout_width="70dp" android:id="@+id/buClearFilter"></Button>
    </LinearLayout>
</LinearLayout>